# statistics-by-rust

./: Cargo.toml  Makefile.toml  README.md  search-index.js  settings.html  source-files.js
src/: lib.rs  metrics.rs
src/statistics_by_rust/: lib.rs.html  metrics.rs.html
statistics_by_rust/: all.html  fn.bar_chart.html  fn.frequency_distribution.html  index.html  sidebar-items.js
statistics_by_rust/metrics/: fn.mean.html  index.html  sidebar-items.js
