[package]
name = "statistics-by-rust"
version = "0.1.0"
authors = ["matsu7874 <mtsmtkmt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"

[dev-dependencies]
float-cmp = "0.8.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]